--- a/css/scss/_content.scss
+++ b/css/scss/_content.scss
@@ -19,7 +19,11 @@
         opacity: 40%;
     }
 }
-
+@media screen and (max-width:600px){
+    .breadcrumbs{
+        margin: 0px 0 30px;
+    }
+}
 
 //Start Contact// 
 .contacts_block {
@@ -71,6 +75,15 @@
                 }
             }
 
+            .btn_call {
+                color: $color_a;
+
+                &:hover {
+                    text-decoration: none;
+                    border-color: transparent;
+                }
+            }
+
             &:nth-child(4){
                 width: 400px;
             }
@@ -85,7 +98,6 @@
     height: 650px;
     margin: 0px 0px 100px;
     position: relative;
-    opacity: 0;
 
     div {
         width: 100%;
@@ -164,23 +176,22 @@
 }
 
 
-@media screen and (max-width:1610px){
+@media screen and (max-width:1500px){
     .contacts{
-        width: 55%;
+        //width: 425px;
 
         &::before{
             left: -60px;
         }
     }
 }
-@media screen and (max-width:1350px){
+@media screen and (max-width:1500px){
     .min_forms{
-        width: 420px;
+        width: 450px;
     }
 }
 @media screen and (max-width:1200px){
     .contacts{
-
         &::before{
             left: -30px;
         }
@@ -189,10 +200,14 @@
             height: 195px;
         }
     }
+    .min_forms{
+        width: 400px;
+        padding: 20px 30px 40px;
+    }
 }
-@media screen and (max-width:1100px){
+@media screen and (max-width:1030px){
     .contacts{
-        width: 45%;
+        //width: 45%;
         &::before{
             bottom: 0px;
         }
@@ -201,43 +216,52 @@
             height: 145px;
         }
     }
-}
-@media screen and (max-width:910px){
-    .contacts_block{
-        display: flex;
-        flex-wrap: wrap;
+    .contacts_block .text {
+        margin-left: 330px;
+        padding-top: 33px;
+        margin-bottom: -50px;
+
+        .cont {
+            margin: 0px 0px 30px 0;
+            width: 100%;
+        }
     }
     .min_forms{
-        position: static;
-        width: 100%;
-        padding-right: 100px;
-        padding-left: 100px;
-        order: 2;
-    }
-    .contacts{
-        order: 1;
-        width: 100%;
-        margin-bottom: 20px;
-        &::before{
-            bottom: 10px;
+        width: 300px;
+        padding: 20px 20px 10px;
+        input[type=checkbox]:not(checked) + label {
+            margin-bottom: 10px;
         }
     }
 
-    iframe{
-        margin-top: -300px;
+    #map{
+        height: 500px;
+        margin-bottom: 60px;
     }
 }
-@media screen and (max-width:768px){
-    .min_forms{
-        padding-right: 60px;
-        padding-left: 60px;
+@media screen and (max-width:800px){
+    .contacts_block .text::after {
+        display: none;
     }
 }
-@media screen and (max-width:607px){
-    .contacts{
-        &::before{
-            height: 290px;
+
+@media screen and (max-width:600px){
+    .contacts_block {
+        .text {
+            margin-left: 0px;
+            padding-top: 0px;
+            margin-bottom: 0px;
         }
+    }
+
+    #map{
+        height: 300px;
+        margin-bottom: 40px;
+    }
+
+    .min_forms {
+        position: relative;
+        width: auto;
     }
 }
 @media screen and (max-width:500px){
