--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -13,11 +13,11 @@
 @import 'forms';
 @import 'footer';
 @import 'our_work';
- @import 'content';
+@import 'content';
+@import 'popup';
 // @import 'gallery';
 // @import 'news';
 // @import 'basket';
-// @import 'popup';
 // @import 'services';
 
 //@import 'animate';
