--- a/css/scss/_about.scss
+++ b/css/scss/_about.scss
@@ -100,6 +100,11 @@
     .page_width {
         padding-bottom: 96px;
     }
+
+    .breadcrumbs .active {
+        opacity: 1;
+        color: #fff;
+    }
     .text {
         //width: 50%;  
         //margin-top: 60px;
@@ -174,7 +179,8 @@
 
         img {
             max-width: 100%;
-            vertical-align: auto;
+            position: relative;
+            z-index: 1;
         }
 
     }
@@ -197,21 +203,156 @@
 
 
 @media screen and (max-width: 1500px) {
-    
+    #about_section {
+        .page_width {
+            padding-top: 100px;
+            padding-bottom: 50px;
+
+            &::before {
+                top: 55px;
+            }
+        }
+    }
+    #about_section .text::before {
+        bottom: 0;
+        left: -30px;
+    }
+    .important_numbers {
+        .item {
+            padding-bottom: 10px;
+            margin-right: 20px;
+        }
+    }
+    .text_and_image .image::before {
+        bottom: -40px;
+        left: -40px;
+    }
 }
-@media screen and (max-width: 1300px) {
-    
+@media screen and (max-width: 1200px) {
+    .important_numbers {
+        padding-right: 5%;
+    }
+    #about_section .text::before {
+        left: -20px;
+    }
+
+    .text_and_image {
+        align-items: flex-start;
+        .image {
+            width: 50%;
+            min-width: 50%;
+        }
+        .image::before {
+            bottom: -20px;
+            left: -20px;
+        }
+        .text {
+            .button {
+                margin-top: 30px;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 1030px) {
-    
+    #about_section {
+        .page_width {
+            padding-top: 50px;
+            padding-bottom: 10px;
+
+            &::before {
+                top: -15px;
+                margin-left: 30px;
+            }
+        }
+        .text .button {
+            margin-top: 20px;
+        }
+    }
+    .important_numbers {
+        background: none;
+        margin-left: 55%;
+        padding-right: 0;
+        padding-top: 70px;
+        .item {
+            margin-right: 5px;
+        }
+    }
+    #about_page_main {
+        padding-top: 100px;
+        .page_width {
+            padding-bottom: 50px;
+        }
+        .text {
+            max-width: 750px;
+            padding: 40px;
+        }
+    }
+    .grey_bg .page_width {
+        padding-top: 50px;
+        padding-bottom: 40px;
+    }
 }
 
 @media screen and (max-width: 800px) {
-     
+    #about_section {
+        .text{
+            padding-bottom: 20px;
+            float: none;
+            width: auto;
+            max-width: none;
+            &::before {
+                left: -10px;
+            }
+        }
+    }
+    .important_numbers {
+        margin-left: 0;
+        padding-top: 20px;
+        display: flex;
+        justify-content: space-between;
+
+        .item {
+            width: auto;
+        }
+    }
+    .text_and_image {
+        display: block;
+        .image {
+            width: 90%;
+            max-width: 500px;
+            margin-bottom: 30px;
+        }
+        .image::before {
+            bottom: -20px;
+            left: -10px;
+        }
+        .text {
+            .button {
+                margin-top: 10px;
+            }
+        }
+    }
 }
 @media screen and (max-width: 600px) {
-    
+    .important_numbers {
+        flex-wrap: wrap;
+
+        .item {
+            width: 45%;
+            box-sizing: border-box;
+            margin-right: 5%;
+        }
+    }
+    #about_page_main {
+        .page_width {
+            padding-bottom: 30px;
+        }
+        padding-top: 90px;
+        .text {
+            padding: 20px 20px 30px;
+        }
+    }
 }
 
 @media screen and (max-width: 450px) {
