--- a/css/scss/_advantages.scss
+++ b/css/scss/_advantages.scss
@@ -37,6 +37,12 @@
         .icon {
             margin-bottom: 30px;
             height: 170px;
+            
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: contain;
+            }
         }
         .text {
             //margin: 0 15px;
@@ -64,26 +70,57 @@
 
 }
 
-@media screen and (max-width: 1500px) {
+// @media screen and (max-width: 1500px) {
     
-}
+// }
 @media screen and (max-width: 1300px) {
     
 }
 
 @media screen and (max-width: 1030px) {
-    
+    #advantages .page_width {
+        padding-top: 50px;
+        padding-bottom: 25px;
+    }
+    .advantages_container .item .icon {
+        margin-bottom: 10px;
+        height: 120px;
+    }
 }
 
 @media screen and (max-width: 800px) {
-     
+    .advantages_container {
+        flex-wrap: wrap;
+        margin: 0 0;
+        .item {
+            margin: 0px 10% 10px 0;
+            //width: 320px;
+            // p {
+            //     padding-left: 20px;
+            //     padding-right: 20px;
+            // }
+        }
+    }
 }
 @media screen and (max-width: 600px) {
-    
+    #advantages .page_width {
+        padding-top: 30px;
+        padding-bottom: 5px;
+    }
+    .advantages_container {
+        .item {
+            margin: 0px 6.5% 10px 0;
+            width: 150px;
+        }
+    }
 }
 
-@media screen and (max-width: 450px) {
-
+@media screen and (max-width: 400px) {
+    .advantages_container {
+        .item {
+            margin: 0px 0% 10px 0;
+        }
+    }
 }
 
 /* end advantages styles */
