--- a/css/scss/_directions.scss
+++ b/css/scss/_directions.scss
@@ -135,6 +135,7 @@
                         margin-left: 10px;
                         font-size: 21px;
                         width: 40px;
+                        margin-right: -40px;
                         height: 10px;
                         position: relative;
                         @include transition(all);
@@ -194,38 +195,134 @@
 
     &.directions {
         margin-bottom: 102px;
+        margin-right: 0;
+        margin-left: 0;
+        .item {
+            margin-bottom: 0;
+        }
     }
 }
 
 
 
-@media screen and (max-width: 1500px) {
-    
+@media screen and (max-width: 1550px) {
+    .directions_container {
+        .item{
+            &:hover {
+                &:first-child {
+                    left: -3.5%;
+                }
+                &:last-child {
+                    right: -3.5%;
+                }
+            }
+            .direction_menu {
+                padding: 60px 5% 60px 5%;
+            }
+        }
+    }
 }
-@media screen and (max-width: 1300px) {
-    
+@media screen and (max-width: 1200px) {
+    .directions_container {
+        .item{
+            &:hover {
+                &:first-child {
+                    left: 0;
+                }
+                &:last-child {
+                    right: 0;
+                    .direction_menu {
+                        left: -100%;
+                    }
+                }
+            }
+            .direction_menu {
+                padding: 50px 30px 50px 30px;
+                width: 100%;
+                ul a::after {
+                    width: 20px;
+                    margin-right: -30px;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 1030px) {
-    
+    #directions .page_width {
+        padding-top: 50px;
+        padding-bottom: 26px;
+    }
+    .directions_slider.directions {
+        margin-bottom: 50px;
+    }
 }
 
 @media screen and (max-width: 800px) {
-     
+    #directions {
+        background-position: left center;
+    }
+    .directions_container {
+        .item {
+            width: calc(100% - 30px);
+            overflow: hidden;
+            margin-bottom: 30px;
+            height: 430px;
+
+            .image {
+                height: 400px;
+                margin-bottom: 10px;
+            }
+
+            .direction_menu {
+                left: -100%;
+                z-index: 3;
+                background: rgb(25, 21, 24, 0.9);
+                padding-left: 15px;
+                height: 400px;
+            }
+
+            &:hover {
+                &:first-child, &:last-child {
+                    .direction_menu {
+                        left: 0%;
+                    }
+                }
+                
+            }
+        }
+    }
 }
 @media screen and (max-width: 600px) {
-    
+    #directions .page_width {
+        padding-top: 30px;
+        padding-bottom: 1px;
+    }
+    .directions_container .item .direction_menu {
+        padding-top: 20px;
+    }
+    .directions_slider.directions {
+        margin-bottom: 30px;
+    }
 }
 
-@media screen and (max-width: 450px) {
-
+@media screen and (max-width: 500px) {
+    .directions_slider {
+        padding-bottom: 50px;
+    
+        .slick-list {
+            margin: 0 0px;
+        }
+    }
 }
 
 //start directions page//
 .directions{
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
+    margin-left: -15px;
+    margin-right: -15px;
     .item{
         margin: 0 15px 30px;
         width: calc(25% - 30px);
@@ -234,11 +331,12 @@
             position: relative;
             border-radius: 5px;
             overflow: hidden;
+            height: 420px;
             
             a{
                 position: relative;
                 width: 100%;
-                height: 420px;
+                height: 100%;
                 border-radius: 5px;
                 display: block;
 
@@ -258,7 +356,6 @@
                     object-fit: cover;
                     width: 100%;
                     height: 100%;
-                    opacity: 100%;
                 }
                 .more{    
                     position: absolute;
@@ -282,49 +379,87 @@
     
                     
                 }
-
-                &:hover{
-                    &::before {
-                        opacity: 100%;
-                    }
-                    
-                    .more{
-                        bottom: 60px;
-                    }
-                }
             }
         }
 
         .text{
             background-color: #FFF;
-            p{
-                margin-top: 20px;
-                //padding: 0 20px;
-                text-align: center;
-                font-weight: 500;
-            }
+            text-align: center;
+            font-weight: 500;
             a {
                 display: block;
                 color: $color_text;
+                min-height: 54px;
+                padding-top: 20px;
+
+                &:hover {
+                    text-decoration: none;
+                    color: $color_a;
+                }
+            }
+        }
+
+        
+
+        &:hover{
+            .img a {
+                &::before {
+                    opacity: 100%;
+                }
+                
+                .more{
+                    bottom: 60px;
+                }
+            }
+            a {
+                color: $color_a;
             }
         }
     }
 }
-
-@media screen and (max-width:1024px){
+@media screen and (max-width:1300px){
+    .directions .item{
+        .img {
+            height: 320px;
+        }
+    }
+}
+@media screen and (max-width:1030px){
     .directions .item{
         width: calc( 33% - 30px);
     }
 }
-@media screen and (max-width:900px){
+@media screen and (max-width:800px){
     .directions .item{
         width: calc( 50% - 30px);
     }
 }
-@media screen and (max-width:600px){
-    .directions .item{
-        width:100%;
-        margin: 0 0px 40px;
+@media screen and (max-width:500px){
+    .directions {
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 10px;
+        .item{
+            width:100%;
+            margin: 0 0px 30px;
+            .img {
+                height: 250px;
+            }
+
+            .text a {
+                padding-top: 10px;
+                min-height: auto;
+            }
+        }
+    }
+}
+@media screen and (max-width:400px){
+    .directions {
+        .item{
+            .img {
+                height: 200px;
+            }
+        }
     }
 }
 //end directions page//
