--- a/css/scss/_forms.scss
+++ b/css/scss/_forms.scss
@@ -4,9 +4,6 @@
 	z-index: 2;
 	//overflow: visible;
 	background: #F8F8F8;
-	&:after {
-		@include clear();
-    }
 
     .page_width {
 		padding-top: 104px;
@@ -285,160 +282,70 @@
         
 }
 
-@media screen and (max-width: 1600px) {
-    #main_form {
-	
-		.image {
-			width: 45%;
-		}
-	
-		.page_width {
-			margin-left: 45%;
-	
-			&::before, &::after {
-				width: 133/1480*1.4*100%;
-			}
-			&::after {
-				left: -133/1480*1.4*100%;
-			}
-		}
+@media screen and (max-width: 1700px) {
+	#main_form .page_width::before {
+		left: 5px;
 	}
 }
 
 @media screen and (max-width: 1300px) {
-    #main_form {
-	
-		.image {
-			width: 40%;
-		}
-	
-		.page_width {
-			margin-left: 40%;
-			padding-top: 60px;
-    		padding-bottom: 20px;
-	
-			&::before, &::after {
-				width: 133/1480*1.3*100%;
-				top: 70px;
-			}
-			&::after {
-				left: -133/1480*1.3*100%;
-			}
-		}
-	}
+    
 }
 @media screen and (max-width: 1200px) {
-    #main_form {
-		.form_block {
-			padding: 0 0 0 20px;
-		}
-	}
-	#small_form {
-		.text {
-			float: none;
-			margin-right: 0px;
-		}
-		.form_block {
-			float: none;
-			margin-left: 0;
-			form {
-				margin: 0;
-			}
-			.input_text {
-				float: left;
-				margin-right: 10px;
-				width: calc(100% - 175px);
-				margin-left: 0;
-			}
-			button[type=submit] {
-				padding: 0 15px 0 15px;
-			}
-			
-			input[type=checkbox]:not(checked) + label {
-				margin: 0px 0px 20px; 
-			}
-		}
-		
-	}
+    
 }
 
 @media screen and (max-width: 1100px) {
-    #main_form {
-	
-		.image {
-			width: 35%;
-		}
-	
-		.page_width {
-			margin-left: 35%;
-	
-			&::before, &::after {
-				width: 133/1480*1.2*100%;
-			}
-			&::after {
-				left: -133/1480*1.2*100%;
-			}
-		}
-	}
+    
 }
 
 @media screen and (max-width: 1030px) {
 	#main_form {
 	
-		.image {
-			width: 22.5%;
-		}
-	
 		.page_width {
-			margin-left: 22.5%;
-	
-			&::before, &::after {
-				width: 133/1480*1.2*100%;
+			padding-top: 50px;
+			padding-bottom: 50px;
+			margin-bottom: 0px;
+
+			&::before {
+				bottom: 10px;
 			}
-			&::after {
-				left: -133/1480*1.2*100%;
-			}
+		}
+		.form_block {
+			margin-top: 20px;
+			padding: 40px 20px;
 		}
 	}
 }
 
 @media screen and (max-width: 900px) {
-	#main_form {
-		.page_width {
 	
-			&::before, &::after {
-				width: 133/1480*100%;
-			}
-			&::after {
-				left: -133/1480*100%;
-			}
-		}
-	}
 }
 @media screen and (max-width: 800px) {
-	#main_form {
-		.page_width {
 	
-			&::before, &::after {
-				display: none;
-			}
-		}
-	}
 }
 
 @media screen and (max-width: 600px) {
     #main_form {
-		.image {
-			display: none;
-		}
 		.page_width {
-			margin-left: 0;
 			padding-top: 30px;
-			padding-bottom: 10px;
+			padding-bottom: 30px;
 		}
+		.form_block {
+			margin-top: 20px;
+			padding: 20px 10px;
+
+			form {
+				padding: 30px 10px 20px;
+			}
+		}
+	}
+	.form_block .input_text {
+		margin-bottom: 15px;
 	}
 	.form_block .textarea {
 		margin-left: 10px;
+		margin-bottom: 0px;
 	}
 	.form_block .input_text {
 		width: calc(100% - 20px);
@@ -450,7 +357,13 @@
 	.form_block .input_file {
 		margin-right: 20px;
 		margin-left: 10px;
-		margin-bottom: 30px;
+		margin-bottom: 15px;
+	}
+	.form_block input[type=text] {
+		height: 45px;
+	}
+	.form_block textarea {
+		height: 120px;
 	}
 }
 
