--- a/css/scss/_our_work.scss
+++ b/css/scss/_our_work.scss
@@ -45,6 +45,12 @@
             width: 237px;
             position: relative;
             border-radius: 50%;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: contain;
+            }
         }
         .text {
             font-weight: 700;
@@ -85,22 +91,105 @@
     }
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1700px) {
+    #our_work {
+        background-position: 30% top;
+    }
     
 }
 @media screen and (max-width: 1300px) {
-    
+    #our_work {
+        background-position: 20% top;
+    }
 }
 
 @media screen and (max-width: 1030px) {
-    
+    #our_work {
+        background-position: 15% top;
+        background-size: auto 100%;
+        margin-bottom: 50px;
+        .page_width {
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+    }
+
+    .numbers_slider .item {
+        text-align: center;
+        .icon {
+            margin-left: 0px;
+            height: 180px;
+            width: 180px;
+            display: inline-block;
+        }
+        .text {
+            font-size: 80px;
+            line-height: 95px;
+        }
+    }
+    .description_slider {
+        margin: 0 0 0px 35%;
+        padding: 0 0 50px;
+    }
 }
 
 @media screen and (max-width: 800px) {
-     
+    .numbers_slider {
+        width: 200px;
+        .item {
+            .icon {
+                height: 130px;
+                width: 130px;
+            }
+            .text {
+                font-size: 50px;
+                line-height: 60px;
+            }
+        }
+    }
+    .description_slider {
+        .item {
+            .text {
+                margin-bottom: 10px;
+            }
+        }
+    }
 }
 @media screen and (max-width: 600px) {
-    
+    #our_work {
+        background-position: 35% top;
+        background-size: auto 100%;
+        margin-bottom: 30px;
+        .page_width {
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
+    }
+    .numbers_slider {
+        float: none;
+    }
+    .description_slider {
+        margin-left: 0;
+        padding-bottom: 0;
+        .item {
+            .text {
+                margin-bottom: 10px;
+            }
+        }
+
+        .slick-arrow {
+            top: 180px
+        }
+        .slick-prev {
+            left: auto;
+            right: 60px;
+            margin-left: -49px;
+        }
+        .slick-next {
+            right: 10px;
+            margin-right: 0;
+        }
+    }
 }
 
 @media screen and (max-width: 450px) {
