--- a/css/scss/_projects.scss
+++ b/css/scss/_projects.scss
@@ -211,6 +211,7 @@
         border-radius: 5px;
         margin: 0 10px;
         height: 110px;
+        cursor: pointer;
 
         img {
             width: 100%;
@@ -235,6 +236,7 @@
         top: 0;
         left: 0;
         background: url(images/icon_play.svg) no-repeat center / 70px 70px;
+        pointer-events: none;
     }
 }
 .description {
@@ -291,22 +293,69 @@
 }
 
 
-@media screen and (max-width: 1500px) {
+// @media screen and (max-width: 1500px) {
     
-}
+// }
 @media screen and (max-width: 1300px) {
-    
+    .projects_container .item {
+        height: 300px;
+    }
 }
 
 @media screen and (max-width: 1030px) {
-    
+    #projects {
+        padding-bottom: 50px;
+        .page_width {
+            padding-top: 50px;
+            &::before {
+                bottom: 60px;
+            }
+        }
+    }
+    .projects_container {
+        margin-bottom: 40px;
+        .item {
+            width: 33.333%;
+            height: 250px;
+
+            .text {
+                top: 25px;
+            }
+
+            .more {
+                bottom: 22px;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 800px) {
-     
+    
 }
 @media screen and (max-width: 600px) {
-    
+    #projects {
+        padding-bottom: 30px;
+        .page_width {
+            padding-top: 30px;
+            &::before {
+                right: 5px;
+            }
+        }
+    }
+    .projects_container {
+        margin-bottom: 30px;
+        .item {
+            width: 100%;
+            height: 150px;
+            .text {
+                left: 25px;
+            }
+
+            .more {
+                left: 25px;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 450px) {
