--- a/css/scss/_directions.scss
+++ b/css/scss/_directions.scss
@@ -488,6 +488,20 @@
         margin-bottom: -30px;
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .icon_bg::after {
+        width: 300px;
+        height: 300px;
+        top: 70px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .icon_bg::after {
+        display: none;
+    }
+}
+
 .middle{
     text-align: center;
     margin-top: 60px;
