--- a/css/scss/_advantages.scss
+++ b/css/scss/_advantages.scss
@@ -73,9 +73,14 @@
 // @media screen and (max-width: 1500px) {
     
 // }
-@media screen and (max-width: 1300px) {
-    
-}
+// @media screen and (max-width: 1600px) {
+//     #advantages {
+//         .page_width {
+//             padding-top: 70px;
+//             padding-bottom: 30px;
+//         }
+//     }
+// }
 
 @media screen and (max-width: 1030px) {
     #advantages .page_width {
