--- a/css/scss/_our_work.scss
+++ b/css/scss/_our_work.scss
@@ -2,7 +2,7 @@
 
 #our_work {
     background: #143F00 url(images/bg_our_work.jpg) no-repeat center top ;
-    margin-bottom: 104px;
+    //margin-bottom: 104px;
     .page_width {
         padding-top: 103px;
         padding-bottom: 60px;
@@ -107,7 +107,7 @@
     #our_work {
         background-position: 15% top;
         background-size: auto 100%;
-        margin-bottom: 50px;
+        //margin-bottom: 50px;
         .page_width {
             padding-top: 50px;
             padding-bottom: 50px;
@@ -159,7 +159,7 @@
     #our_work {
         background-position: 35% top;
         background-size: auto 100%;
-        margin-bottom: 30px;
+        //margin-bottom: 30px;
         .page_width {
             padding-top: 30px;
             padding-bottom: 30px;
