--- a/css/scss/_directions.scss
+++ b/css/scss/_directions.scss
@@ -87,7 +87,7 @@
             pointer-events: none;
         }
         .direction_menu {
-            background: #191518;
+            background: #444248;//#191518;
             position: absolute;
             //z-index: 2;
             box-sizing: border-box;
@@ -157,7 +157,7 @@
         }
 
         &:hover {
-            z-index: 5 ;
+            z-index: 2;
             .image {
                 &::before {
                     opacity: 0;
@@ -292,6 +292,10 @@
             }
         }
     }
+
+    .gallery_slider .slick-arrow {
+        top: -42px;
+    }
 }
 @media screen and (max-width: 600px) {
     #directions .page_width {
@@ -317,6 +321,7 @@
 }
 
 //start directions page//
+
 .directions{
     display: flex;
     flex-wrap: wrap;
@@ -348,7 +353,7 @@
                     bottom: 0;
                     right: 0;
                     opacity: 0;
-                    background-image: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%), url(zakladanie-ogrodow-Gliwice-Slask-4.jpg);
+                    background-image: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%);
                     @include transition(all);
                 }
 
@@ -558,7 +563,26 @@ main{
         padding-top: 20px;
     }
 }
+.directions_block, .gallery_block {
+    .page_width {
+        padding-top: 104px;
+    }
+}
 
+@media screen and (max-width: 1030px) {
+    .directions_block, .gallery_block {
+        .page_width {
+            padding-top: 50px;
+        }
+    }
+}
+@media screen and (max-width: 600px) {
+    .directions_block, .gallery_block {
+        .page_width {
+            padding-top: 30px;
+        }
+    }
+}
 .gallery_slider {
     padding-top: 5px;
 
@@ -596,6 +620,19 @@ main{
             display: block;
             width: 100%;
             height: 100%;
+            position: relative;
+
+            &::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                opacity: 1;
+                background: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%);
+                @include transition(all);
+            }
         }
 
         img {
@@ -605,8 +642,16 @@ main{
         }
 
         &.video {
+            
             &::before {
                 background-size: 180px 180px;
+                z-index: 1;
+            }
+        }
+
+        &:hover a {
+            &::before {
+                opacity: 0;
             }
         }
     }
