--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -157,6 +157,11 @@ footer {
 			&::before {
 				display: none;
 			}
+			
+			&:hover {
+				text-decoration: none;
+				border-color: transparent;
+			}
 		}
 
 		&.tel::before {
@@ -165,6 +170,7 @@ footer {
 		&.email::before {
 			background-image: url(images/icon_email.svg);
 		}
+
 	}
 	p {
 		&.address::before {
