--- a/css/scss/_partners.scss
+++ b/css/scss/_partners.scss
@@ -13,6 +13,7 @@
 
     .slick-list {
         margin: 0 -20px;
+        padding: 0 !important;
     }
 
     .slick-arrow {
@@ -47,12 +48,14 @@
         img {
             display: inline-block;
             vertical-align: middle;
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
+            max-width: 250px;
+            max-height: 90px;
             object-fit: contain;
         }
 
-        &:hover/*, &.slick-current*/ {
+        &:hover, &.slick-current {
             -webkit-filter: grayscale(0);
             filter: grayscale(0);
         }
